--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -70,6 +70,14 @@ h3{
    color: hsl(234, 20%, 15%);
 }
 
+h4{
+   margin: 0;
+   padding: 0;
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: 1em;
+   color: hsl(234, 20%, 15%);
+}
+
 p{
    margin: 0;
    padding: 0;
@@ -251,4 +259,26 @@ a:active#jobs-link{
     width: 100%;
     margin: auto;
     border: 1px solid hsl(234, 20%, 15%)
+}
+
+.meetup-card{
+    border: 1px solid hsl(234, 20%, 25%);
+    border-radius: 4px;
+    margin: 5px;
+    padding: 5px;
+    background:hsl(54, 50%, 90%);
+}
+
+.meetup-card > h3{
+    margin-bottom: 10px;
+}
+
+.meetup-card h4{
+    margin-bottom: 5px;
+}
+
+#prev-meetups{
+    margin-top: 20px;
+    margin-bottom: 0;
+    text-decoration: underline;
 }
