--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -20,15 +20,30 @@ body {
     --gutter: 20px;
 }
 
+
 .app {
-    padding: var(--gutter) 0;
     display: grid;
+    padding: var(--gutter) 0;
     grid-gap: var(--gutter) 0;
     grid-template-columns: 
         var(--gutter)
         1fr
         var(--gutter);
         align-content: start;
+}
+
+@media only screen and (min-width: 600px){
+    .app{
+    display: grid;
+    grid-gap: 10px;
+    padding: var(--gutter) 0;
+    grid-gap: var(--gutter) 0;
+    grid-template-columns:
+    var(--gutter)
+    repeat(6, 1fr)
+    var(--gutter);
+    grid-gap: 10px;
+    }
 }
 
 .app > *{    
@@ -43,6 +58,8 @@ body {
     margin: 0;
     padding: 0;
 }
+
+
 
 h1{
    margin: auto;
@@ -155,8 +172,30 @@ nav{
 }
 
 /*-------------index CSS------------*/
+
+#meetup-main-link{
+    text-decoration: none;
+}
+
+#meetup-main-link:link{
+    text-decoration: none;
+}
+
+#meetup-main-link:visited{
+    text-decoration: none;
+}
+
+#meetup-main-link:hover h2{
+    color: hsl(234, 20%, 35%);
+}
+
+#meetup-main-link:active h2{
+    color: hsl(234, 20%, 10%);
+}
+
 .scroll-wrapper{
     display: grid;
+    position: relative;
     grid-gap: calc(var(--gutter) / 2);
     grid-template-columns: 
         10px
@@ -209,6 +248,15 @@ nav{
     background:hsl(234, 20%, 30%);
 }
 
+.card > *{
+    color:hsl(54, 50%, 90%);
+}
+
+.card h3{
+    position: absolute;
+    top: 20px;
+}
+
 ul{
     list-style: none;
     padding: 0;
@@ -253,6 +301,29 @@ a:active#jobs-link{
     background-clip: padding-box;
 }
 
+#coding-challenge,
+#article-div,
+#about-us{
+    border: 1px solid hsl(234, 20%, 25%);
+    border-radius: 5px;
+    padding: 5px;
+    background-color: hsl(54, 50%, 90%);
+}
+
+@media only screen and (min-width: 600px){
+    #job-div{
+        margin-bottom: 10px;
+    }
+
+    #coding-challenge{
+        grid-column: 2 / 5;
+    }
+
+    #article-div{
+        grid-column: 5 / -2;
+    }
+}
+
 /*------------meetups CSS-------------*/
 #meetup-calendar{
     height: 400px;
@@ -263,6 +334,7 @@ a:active#jobs-link{
 
 .meetup-card{
     border: 1px solid hsl(234, 20%, 25%);
+    height: 100%;
     border-radius: 4px;
     margin: 5px;
     padding: 5px;
@@ -281,6 +353,15 @@ a:active#jobs-link{
     margin-top: 20px;
     margin-bottom: 0;
     text-decoration: underline;
+}
+
+@media only screen and (min-width: 600px){
+    #meetups-list{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        row-gap: 10px;
+        list-style-type: none;
+    }
 }
 
 /*-----------challenges CSS------------*/
@@ -330,6 +411,15 @@ figure img{
 
 .article-wrapper{
     display: none; /* default is hidden */
+    margin-bottom: 20px;
+    border: 1px solid hsl(234, 20%, 25%);
+    border-radius: 5px;
+    padding: 5px;
+    background-color: hsl(54, 50%, 90%);
+}
+
+.article-wrapper h3{
+    margin-bottom: 10px;
 }
 
 /* the show class is toggled on elements as they are filtered */
